[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/main_menu_screen.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ricochet_title.svg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/gunplay.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = 33.0
margin_right = 352.0
margin_bottom = -33.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Credit" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = 15.0
margin_right = 461.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_fonts/font = SubResource( 1 )
text = "Made by James & Michael Rainsford Ryan"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.373
anchor_top = 0.6
anchor_right = 0.635
anchor_bottom = 1.0
margin_left = 0.0479736
margin_right = -0.240051
custom_constants/separation = 15

[node name="PlayButton" type="Button" parent="Options"]
margin_right = 267.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "START"

[node name="OptionsButton" type="Button" parent="Options"]
margin_top = 55.0
margin_right = 267.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 40 )
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="Options"]
margin_top = 110.0
margin_right = 267.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 40 )
text = "EXIT"

[connection signal="pressed" from="Options/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Options/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Options/ExitButton" to="." method="_on_ExitButton_pressed"]
